src/agus_maps_flutter.h

// A very short-lived native function.
//
// For very short-lived functions, it is fine to call them on the main isolate.
// They will block the Dart execution while running the native function, so
// only do this for native functions which are guaranteed to be short-lived.
FFI_PLUGIN_EXPORT int sum(int a, int b);
// A longer lived native function, which occupies the thread calling it.
//
// Do not call these kind of native functions in the main isolate. They will
// block Dart execution. This will cause dropped frames in Flutter applications.
// Instead, call these native functions on a separate isolate.
FFI_PLUGIN_EXPORT int sum_long_running(int a, int b);
FFI_PLUGIN_EXPORT void comaps_init(const char* apkPath, const char* storagePath);
FFI_PLUGIN_EXPORT void comaps_init_paths(const char* resourcePath, const char* writablePath);
FFI_PLUGIN_EXPORT void comaps_load_map_path(const char* path);
FFI_PLUGIN_EXPORT void comaps_set_view(double lat, double lon, int zoom);
// Invalidate the current viewport to force tile reload
FFI_PLUGIN_EXPORT void comaps_invalidate(void);
// Force complete redraw by triggering UpdateMapStyle
// This clears all render groups and forces complete tile re-request
// Call after registering maps to ensure tiles are loaded
FFI_PLUGIN_EXPORT void comaps_force_redraw(void);
// Touch event handling
// type: 1=TOUCH_DOWN, 2=TOUCH_MOVE, 3=TOUCH_UP, 4=TOUCH_CANCEL
// id1, x1, y1: first touch pointer
// id2, x2, y2: second touch pointer (use -1 for id2 if single touch)
FFI_PLUGIN_EXPORT void comaps_touch(int type, int id1, float x1, float y1, int id2, float x2, float y2);
// Place page (POI) information
// Returns 1 if a place page is available, 0 otherwise
FFI_PLUGIN_EXPORT int comaps_place_page_has_data(void);
// Structured place page payload for native consumers.
typedef struct {
	const char* mwm_name;
	int64_t mwm_version;
	int64_t index;
} AgusPlacePageFeatureId;
typedef struct {
	const char* decimal;
	const char* dms;
	const char* osm;
	const char* olc;
	const char* utm;
	const char* mgrs;
} AgusPlacePageCoordinates;
typedef struct {
	int64_t key;
	const char* value;
} AgusPlacePageIntMetadataEntry;
typedef struct {
	const char* key;
	const char* value;
} AgusPlacePageStringMetadataEntry;
typedef struct {
	AgusPlacePageFeatureId feature_id;
	int32_t object_type;
	int32_t opening_mode;
	const char* title;
	const char* secondary_title;
	const char* subtitle;
	const char* address;
	double lat;
	double lon;
	const char* wiki_description_html;
	int32_t road_type;
	int32_t is_route_point;
	AgusPlacePageCoordinates coordinates;
	const char** raw_types;
	int32_t raw_types_count;
	AgusPlacePageIntMetadataEntry* metadata;
	int32_t metadata_count;
	AgusPlacePageStringMetadataEntry* metadata_tags;
	int32_t metadata_tags_count;
	int32_t has_bookmark_id;
	int64_t bookmark_id;
	int32_t has_bookmark_category_id;
	int64_t bookmark_category_id;
	int32_t has_track_id;
	int64_t track_id;
} AgusPlacePageData;
// Returns a heap-allocated snapshot of the current place page data, or NULL.
// Call comaps_place_page_free when done.
FFI_PLUGIN_EXPORT AgusPlacePageData* comaps_place_page_copy(void);
// Frees a snapshot allocated by comaps_place_page_copy.
FFI_PLUGIN_EXPORT void comaps_place_page_free(AgusPlacePageData* data);
// Clear the current place page selection
FFI_PLUGIN_EXPORT void comaps_place_page_clear_selection(void);
// Scale (zoom) the map by a factor, centered on a specific pixel point.
// factor: Zoom factor (>1 zooms in, <1 zooms out). Use exp(scrollDelta) for smooth zooming.
// pixelX, pixelY: Screen coordinates to zoom towards (in physical pixels)
// animated: Whether to animate the zoom transition
// This is the preferred method for scroll wheel zoom on desktop platforms.
FFI_PLUGIN_EXPORT void comaps_scale(double factor, double pixelX, double pixelY, int animated);
// Scroll/pan the map by pixel distance
// distanceX, distanceY: Distance to scroll in physical pixels
FFI_PLUGIN_EXPORT void comaps_scroll(double distanceX, double distanceY);
// Register a single MWM map file directly by full path.
// This bypasses the version folder scanning and registers the map file
// directly with the rendering engine.
// Returns: 0 on success, -1 if framework not ready, -2 on exception, 
//          or MwmSet::RegResult value on registration failure
FFI_PLUGIN_EXPORT int comaps_register_single_map(const char* fullPath);
// Register a single MWM map file directly by full path, with an explicit
// snapshot version (e.g. 251209).
//
// IMPORTANT: LocalCountryFile::MakeTemporary() sets version=0, which can lead
// to MwmSet::RegResult::VersionTooOld when the engine expects a non-zero
// snapshot version for a given country/world file.
FFI_PLUGIN_EXPORT int comaps_register_single_map_with_version(const char* fullPath, int64_t version);
// Explicitly shutdown the CoMaps framework.
// Call this before app termination to ensure clean shutdown and avoid crashes.
FFI_PLUGIN_EXPORT void comaps_shutdown(void);
// Debug: List all registered MWMs and their bounds to logcat
FFI_PLUGIN_EXPORT void comaps_debug_list_mwms();
// Debug: Check if a lat/lon point is covered by any registered MWM
FFI_PLUGIN_EXPORT void comaps_debug_check_point(double lat, double lon);
// Deregister a map file by path
FFI_PLUGIN_EXPORT int comaps_deregister_map(const char* fullPath);