lib/agus_maps_flutter_bindings_generated.dart

// ignore_for_file: always_specify_types
// ignore_for_file: camel_case_types
// ignore_for_file: non_constant_identifier_names

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import
import 'dart:ffi' as ffi;

/// Bindings for `src/agus_maps_flutter.h`.
///
/// Regenerate bindings with `dart run ffigen --config ffigen.yaml`.
///
class AgusMapsFlutterBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  AgusMapsFlutterBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  AgusMapsFlutterBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// A very short-lived native function.
  ///
  /// For very short-lived functions, it is fine to call them on the main isolate.
  /// They will block the Dart execution while running the native function, so
  /// only do this for native functions which are guaranteed to be short-lived.
  int sum(
    int a,
    int b,
  ) {
    return _sum(
      a,
      b,
    );
  }

  late final _sumPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>('sum');
  late final _sum = _sumPtr.asFunction<int Function(int, int)>();

  /// A longer lived native function, which occupies the thread calling it.
  ///
  /// Do not call these kind of native functions in the main isolate. They will
  /// block Dart execution. This will cause dropped frames in Flutter applications.
  /// Instead, call these native functions on a separate isolate.
  int sum_long_running(
    int a,
    int b,
  ) {
    return _sum_long_running(
      a,
      b,
    );
  }

  late final _sum_long_runningPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Int, ffi.Int)>>(
          'sum_long_running');
  late final _sum_long_running =
      _sum_long_runningPtr.asFunction<int Function(int, int)>();

  void comaps_init(
    ffi.Pointer<ffi.Char> apkPath,
    ffi.Pointer<ffi.Char> storagePath,
  ) {
    return _comaps_init(
      apkPath,
      storagePath,
    );
  }

  late final _comaps_initPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>>('comaps_init');
  late final _comaps_init = _comaps_initPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void comaps_init_paths(
    ffi.Pointer<ffi.Char> resourcePath,
    ffi.Pointer<ffi.Char> writablePath,
  ) {
    return _comaps_init_paths(
      resourcePath,
      writablePath,
    );
  }

  late final _comaps_init_pathsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<ffi.Char>,
              ffi.Pointer<ffi.Char>)>>('comaps_init_paths');
  late final _comaps_init_paths = _comaps_init_pathsPtr.asFunction<
      void Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>)>();

  void comaps_load_map_path(
    ffi.Pointer<ffi.Char> path,
  ) {
    return _comaps_load_map_path(
      path,
    );
  }

  late final _comaps_load_map_pathPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
          'comaps_load_map_path');
  late final _comaps_load_map_path = _comaps_load_map_pathPtr
      .asFunction<void Function(ffi.Pointer<ffi.Char>)>();

  void comaps_set_view(
    double lat,
    double lon,
    int zoom,
  ) {
    return _comaps_set_view(
      lat,
      lon,
      zoom,
    );
  }

  late final _comaps_set_viewPtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Double, ffi.Double, ffi.Int)>>(
      'comaps_set_view');
  late final _comaps_set_view =
      _comaps_set_viewPtr.asFunction<void Function(double, double, int)>();

  /// Invalidate the current viewport to force tile reload
  void comaps_invalidate() {
    return _comaps_invalidate();
  }

  late final _comaps_invalidatePtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('comaps_invalidate');
  late final _comaps_invalidate =
      _comaps_invalidatePtr.asFunction<void Function()>();

  /// Force complete redraw by triggering UpdateMapStyle
  /// This clears all render groups and forces complete tile re-request
  /// Call after registering maps to ensure tiles are loaded
  void comaps_force_redraw() {
    return _comaps_force_redraw();
  }

  late final _comaps_force_redrawPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('comaps_force_redraw');
  late final _comaps_force_redraw =
      _comaps_force_redrawPtr.asFunction<void Function()>();

  /// Touch event handling
  /// type: 1=TOUCH_DOWN, 2=TOUCH_MOVE, 3=TOUCH_UP, 4=TOUCH_CANCEL
  /// id1, x1, y1: first touch pointer
  /// id2, x2, y2: second touch pointer (use -1 for id2 if single touch)
  void comaps_touch(
    int type,
    int id1,
    double x1,
    double y1,
    int id2,
    double x2,
    double y2,
  ) {
    return _comaps_touch(
      type,
      id1,
      x1,
      y1,
      id2,
      x2,
      y2,
    );
  }

  late final _comaps_touchPtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(ffi.Int, ffi.Int, ffi.Float, ffi.Float, ffi.Int,
              ffi.Float, ffi.Float)>>('comaps_touch');
  late final _comaps_touch = _comaps_touchPtr.asFunction<
      void Function(int, int, double, double, int, double, double)>();

  /// Place page (POI) information
  /// Returns 1 if a place page is available, 0 otherwise
  int comaps_place_page_has_data() {
    return _comaps_place_page_has_data();
  }

  late final _comaps_place_page_has_dataPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function()>>(
          'comaps_place_page_has_data');
  late final _comaps_place_page_has_data =
      _comaps_place_page_has_dataPtr.asFunction<int Function()>();

  /// Returns a heap-allocated snapshot of the current place page data, or NULL.
  /// Call comaps_place_page_free when done.
  ffi.Pointer<AgusPlacePageData> comaps_place_page_copy() {
    return _comaps_place_page_copy();
  }

  late final _comaps_place_page_copyPtr =
      _lookup<ffi.NativeFunction<ffi.Pointer<AgusPlacePageData> Function()>>(
          'comaps_place_page_copy');
  late final _comaps_place_page_copy = _comaps_place_page_copyPtr
      .asFunction<ffi.Pointer<AgusPlacePageData> Function()>();

  /// Frees a snapshot allocated by comaps_place_page_copy.
  void comaps_place_page_free(
    ffi.Pointer<AgusPlacePageData> data,
  ) {
    return _comaps_place_page_free(
      data,
    );
  }

  late final _comaps_place_page_freePtr = _lookup<
          ffi
          .NativeFunction<ffi.Void Function(ffi.Pointer<AgusPlacePageData>)>>(
      'comaps_place_page_free');
  late final _comaps_place_page_free = _comaps_place_page_freePtr
      .asFunction<void Function(ffi.Pointer<AgusPlacePageData>)>();

  /// Clear the current place page selection
  void comaps_place_page_clear_selection() {
    return _comaps_place_page_clear_selection();
  }

  late final _comaps_place_page_clear_selectionPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'comaps_place_page_clear_selection');
  late final _comaps_place_page_clear_selection =
      _comaps_place_page_clear_selectionPtr.asFunction<void Function()>();

  /// Scale (zoom) the map by a factor, centered on a specific pixel point.
  /// factor: Zoom factor (>1 zooms in, <1 zooms out). Use exp(scrollDelta) for smooth zooming.
  /// pixelX, pixelY: Screen coordinates to zoom towards (in physical pixels)
  /// animated: Whether to animate the zoom transition
  /// This is the preferred method for scroll wheel zoom on desktop platforms.
  void comaps_scale(
    double factor,
    double pixelX,
    double pixelY,
    int animated,
  ) {
    return _comaps_scale(
      factor,
      pixelX,
      pixelY,
      animated,
    );
  }

  late final _comaps_scalePtr = _lookup<
      ffi.NativeFunction<
          ffi.Void Function(
              ffi.Double, ffi.Double, ffi.Double, ffi.Int)>>('comaps_scale');
  late final _comaps_scale =
      _comaps_scalePtr.asFunction<void Function(double, double, double, int)>();

  /// Scroll/pan the map by pixel distance
  /// distanceX, distanceY: Distance to scroll in physical pixels
  void comaps_scroll(
    double distanceX,
    double distanceY,
  ) {
    return _comaps_scroll(
      distanceX,
      distanceY,
    );
  }

  late final _comaps_scrollPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Double, ffi.Double)>>(
          'comaps_scroll');
  late final _comaps_scroll =
      _comaps_scrollPtr.asFunction<void Function(double, double)>();

  /// Register a single MWM map file directly by full path.
  /// This bypasses the version folder scanning and registers the map file
  /// directly with the rendering engine.
  /// Returns: 0 on success, -1 if framework not ready, -2 on exception,
  /// or MwmSet::RegResult value on registration failure
  int comaps_register_single_map(
    ffi.Pointer<ffi.Char> fullPath,
  ) {
    return _comaps_register_single_map(
      fullPath,
    );
  }

  late final _comaps_register_single_mapPtr =
      _lookup<ffi.NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>)>>(
          'comaps_register_single_map');
  late final _comaps_register_single_map = _comaps_register_single_mapPtr
      .asFunction<int Function(ffi.Pointer<ffi.Char>)>();

  /// Register a single MWM map file directly by full path, with an explicit
  /// snapshot version (e.g. 251209).
  ///
  /// IMPORTANT: LocalCountryFile::MakeTemporary() sets version=0, which can lead
  /// to MwmSet::RegResult::VersionTooOld when the engine expects a non-zero
  /// snapshot version for a given country/world file.
  int comaps_register_single_map_with_version(
    ffi.Pointer<ffi.Char> fullPath,
    int version,
  ) {
    return _comaps_register_single_map_with_version(
      fullPath,
      version,
    );
  }

  late final _comaps_register_single_map_with_versionPtr = _lookup<
          ffi
          .NativeFunction<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int64)>>(
      'comaps_register_single_map_with_version');
  late final _comaps_register_single_map_with_version =
      _comaps_register_single_map_with_versionPtr
          .asFunction<int Function(ffi.Pointer<ffi.Char>, int)>();

  /// Explicitly shutdown the CoMaps framework.
  /// Call this before app termination to ensure clean shutdown and avoid crashes.
  void comaps_shutdown() {
    return _comaps_shutdown();
  }

  late final _comaps_shutdownPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>('comaps_shutdown');
  late final _comaps_shutdown =
      _comaps_shutdownPtr.asFunction<void Function()>();

  /// Debug: List all registered MWMs and their bounds to logcat
  void comaps_debug_list_mwms() {
    return _comaps_debug_list_mwms();
  }

  late final _comaps_debug_list_mwmsPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function()>>(
          'comaps_debug_list_mwms');
  late final _comaps_debug_list_mwms =
      _comaps_debug_list_mwmsPtr.asFunction<void Function()>();

  /// Debug: Check if a lat/lon point is covered by any registered MWM
  void comaps_debug_check_point(
    double lat,
    double lon,
  ) {
    return _comaps_debug_check_point(
      lat,
      lon,
    );
  }

  late final _comaps_debug_check_pointPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Double, ffi.Double)>>(
          'comaps_debug_check_point');
  late final _comaps_debug_check_point =
      _comaps_debug_check_pointPtr.asFunction<void Function(double, double)>();

  /// Deregister a map file by path
  int comaps_deregister_map(
    ffi.Pointer<ffi.Char> fullPath,
  ) {
    return _comaps_deregister_map(
      fullPath,
    );
  }
